# udemy-eden-langchain

./: README.md
ice_breaker/: app.py  env_sample  icebreaker.py  output_parsers.py  requirements.txt
ice_breaker/agents/: linkedin_lookup_agent.py  twitter_lookup_agent.py
intro_to_vectro_dbs/: ingesting.py  mediumblog1.txt  requirements.txt
react-langchain/: main.py  requirements.txt  sample_env
vector_db/: pyproject.toml  requirements.txt
vector_db/vector_db/: main.py
