[tool.poetry]
name = "vector-db"
version = "0.1.0"
description = "Udemy Course on Langchain"
authors = ["echeadle <echeadle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
black = "^24.10.0"
langchain = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
